h1. CHANGELOG

h2. 2.3.2 June 24, 2013

* attempt to resolve issue #148 and #220 (failures caused by conflicting gem versions)

h2. 2.3.1 June 22, 2013

* add 'simple-test' example application to diagnose issue #220

h2. 2.3.0 June 22, 2013

* allow Rails 4.0, warn to check for GitHub issues
* don't specify gem versions (Bundler manages updates)
* assign gems to groups in Gemfile (contributed by R2dR)
* add source signposts to generated templates (contributed by Mark D. Blackwell)

h2. 2.2.42 June 20, 2013

* fix prod_webserver handling (contributed by Vitaly Kushner)
* update recipe for rails-prelaunch-signup app (only require capybara-webkit in test)
* update recipe for rails-prelaunch-signup app (replace selenium with capybara-webkit)

h2. 2.2.41 May 23, 2013

* update recipe for rails-prelaunch-signup app (add selenium-webdriver gem)

h2. 2.2.40 April 19, 2013

* update recipe for rails-prelaunch-signup app

h2. 2.2.39 April 2, 2013

* support for continuous testing using Guard (contributed by Paavo Leinonen)

h2. 2.2.38 March 29, 2013

* in 'extras' recipe, use .ruby-version and .ruby-gemset instead of .rvmrc file

h2. 2.2.37 March 26, 2013

* accommodate old Ruby syntax in 'gems' recipe
* fix 'gems' recipe to provide 'pg' or 'mysql2' gems if requested
* update gem 'pg' to 0.15.0
* update gem 'capybara' to 2.0.3
* update gem 'zurb-foundation' to 4.0.9

h2. 2.2.36 March 17, 2013

* in 'extras' recipe, set correct Ruby version in .rvmrc file

h2. 2.2.35 March 17, 2013

* in 'extras' recipe, allow rvmrc option to be set in default file (contributed by Alex Takitani)
* update 'gems' recipe to accommodate Ruby 2.0.0
* update gem 'bootstrap-sass' to 2.3.1.0
* update gem 'cucumber-rails' to 1.3.1
* update gem 'zurb-foundation' to 4.0.8
* update gem 'figaro' to 0.6.3
* update gem 'better_errors' to 0.7.2
* update gem 'database_cleaner' to 1.0.0.RC1
* update gem 'mongoid-rspec' to 1.7.0
* update gem 'simple_form' to 2.1.0
* update gem 'httpclient' to 2.3.3